--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
         <meta name="keywords" content="janit, nakul, yuvraj, iit, neet">
         <meta name="description" content="Free Web tutorials">
         <meta name="author" content="Yuvraj">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-08RWC5CHBM"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'G-08RWC5CHBM');
+        </script>
     </head>
     <body>
         <a>Hello &copy; &#128513;</a>
