to open new tab on clicking social link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#gallary">Gallary</a>
           </li>
           <li>
-            <a href="https://dev.to/janityadav16">Blog</a>
+            <a target="_blank" href="https://dev.to/janityadav16">Blog</a>
           </li>
         </ul>
       </nav>
@@ -51,15 +51,18 @@
         <b>JAIPUR, INDIA</b>
       </p>
       <div class="social-links">
-        <a href="https://github.com/janityadav16">
+        <a target="_blank" href="https://github.com/janityadav16">
           <i class="fab fa-github"></i>
         </a>
-        <a href="https://twitter.com/janityadav16">
+        <a target="_blank" href="https://twitter.com/janityadav16">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://www.instagram.com/janit_16/">
+        <a target="_blank" href="https://www.instagram.com/janit_16/">
           <i class="fab fa-instagram"></i>
         </a>
+        <div class="action-section">
+            <a class="action-button" target="_blank" href="https://docs.google.com/document/d/13b6iPazhttGOtkafBsdl4j-ncAYKRk4MAlOB2K3k_ks/edit?usp=sharing" download>Download Resume</a>
+        </div>
       </div>
     </section>
     <section class="about-section" id="aboutme">
