--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li>
-            <a href="#aboutme">About Me</a>
+            <a href="#aboutme">About</a>
           </li>
           <li>
             <a href="#education">Education</a>
@@ -37,6 +37,9 @@
             <a href="#gallary">Gallary</a>
           </li>
           <li>
+            <a target="_blank" href="https://www.notion.so/57c11c67fb0146d99b40c603f778e15c?v=fb74e98393cc4fa6927dc8d6c59cf1e5&pvs=4">Books</a>
+          </li>
+          <li>
             <a target="_blank" href="https://dev.to/janityadav16">Blog</a>
           </li>
         </ul>
@@ -45,7 +48,7 @@
     <section class="banner">
       <h1>
         <span>JANIT</span>
-        <span class="red">YADAV</span>
+        <span class="red bounce-word" >YADAV</span>
       </h1>
       <p>
         <b>JAIPUR, INDIA</b>
@@ -159,6 +162,7 @@
     
     <!-- Rest of the page content goes here -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="janityadav16" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF5F5F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   </body>
 
 </html>
