this is for changing background color

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
   <body>
+    
     <header>
       <h1 class="logo">janit</h1>
       <nav>
@@ -79,6 +80,8 @@
     <section class="education-section" id="education">
       <div class="education-content">
         <h2>Education</h2>
+        
+
         <div class="education-item">
           <p class="college">Manipal Univerity, Jaipur</p>
           <p class="year-subject">Year: 2023 - 2026 | BCA</p>
@@ -90,7 +93,12 @@
         </div>
       </div>
     </section>
-
+    <section class="github-chart">
+        <h2>GitHub Contributions</h2>
+        <div class="chart-container">
+            <img src="http://ghchart.rshah.org/janityadav16" alt="2016rshah's Github chart" />
+        </div>
+      </section>
     <section class="certificate-section" id="certificates">
       <div class="certificate-content">
         <h2>Certificates</h2>
