--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Janit</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="from here you can visit all my social media accounts and you can ask me about querries on topic's like HTML and CSS,I will try my best to help you solve your problems">
+    <meta name="keywords" content="janit.in, janit.com, html and css">
+    <meta name="author" content="janit yadav">
+    
+    <!-- Meta tags for social media -->
+    <meta property="og:title" content="Janit portfolio">
+    <meta property="og:description" content="from here you can visit all my social media accounts and you can ask me about querries on topic's like HTML and CSS,I will try my best to help you solve your problems">
+    <meta property="og:image" content="https://janit.in/img/4.jpeg">
+    <meta property="og:url" content="http://teitter.com/janityadav16">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="janityadav16">
+    <meta name="twitter:description" content="from here you can visit all my social media accounts and you can ask me about querries on topic's like HTML and CSS,I will try my best to help you solve your problems">
+    <meta name="twitter:image" content="https://janit.in/img/3.jpeg">
+  
+    <title>Janit Portfolio</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-08RWC5CHBM"></script>
@@ -96,7 +114,8 @@
     <section class="github-chart">
         <h2>GitHub Contributions</h2>
         <div class="chart-container">
-            <img src="http://ghchart.rshah.org/janityadav16" alt="2016rshah's Github chart" />
+            <a href="https://github.com/janityadav16">
+            <img src="http://ghchart.rshah.org/janityadav16" alt="2016rshah's Github chart" /></a>
         </div>
       </section>
     <section class="certificate-section" id="certificates">
