to add link of other website

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <a href="#education">Education</a>
           </li>
           <li>
+            <a href="#github">GH Graph</a>
+          </li>
+          <li>
             <a href="#certificates">Certificates</a>
           </li>
           <li>
@@ -101,17 +104,17 @@
         
 
         <div class="education-item">
-          <p class="college">Manipal Univerity, Jaipur</p>
+          <p class="college"><a target="_blank" href="https://jaipur.manipal.edu/">Manipal Univerity, Jaipur</a></p>
           <p class="year-subject">Year: 2023 - 2026 | BCA</p>
         </div>
         <div class="education-item">
-          <p class="college">Takshila Public School, Behror</p>
+          <p class="college"><a target="_blank" href="https://tpsbehror.co.in/">Takshila Public School, Behror</a></p>
           <p class="year-subject">Year: 2009 - 2022 | CBSE</p>
           <!-- <p class="achievement">percentage="75%"</p> -->
         </div>
       </div>
     </section>
-    <section class="github-chart">
+    <section class="github-chart" id="github">
         <h2>GitHub Contributions</h2>
         <div class="chart-container">
             <a href="https://github.com/janityadav16">
@@ -124,7 +127,7 @@
         <div class="certificate-item">
           <p class="college">Responsive Web Designing, freecodecamp</p>
           <p class="year">Year: 2023</p>
-          <p class="certificate-link">Certificate Link: <a href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive web designing</a>
+          <p class="certificate-link">Certificate Link: <a target="_blank" href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive web designing</a>
           </p>
         </div>
       </div>
