to add whatsapp

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <a target="_blank" href="https://twitter.com/janityadav16">
                     <i class="fab fa-twitter"></i>
                 </a>
+                <a target="_blank" href="https://www.linkedin.com/in/janit-yadav-461140279/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
                 <a target="_blank" href="https://www.instagram.com/janit_16/">
                     <i class="fab fa-instagram"></i>
                 </a>
@@ -209,6 +212,21 @@
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
         data-id="janityadav16" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF5F5F"
         data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        <script type="text/javascript">
+            (
+                function () 
+                {
+                    _360_widget_id = `_${Math.random().toString(36).slice(2)}`;
+                    var _360_options = {_360_whatsapp : "+919352460700",_360_order : "whatsapp",_360_greeting_message : "Hello how can i help you",_360_greeting : "yes",_360_g_analytics : "yes",_360_btn_size : "normal",_360_display_btn : "everywhere",_360_chat_bubble : "1",_360_g_analytics_id : "G-08RWC5CHBM", _360_randomID: _360_widget_id};
+                    var _360_proto = document.location.protocol, _360_host = "js.buttongenerator.360dialog.com", _360_url = _360_proto + "//" + _360_host;
+                    var _360_s = document.createElement('script'); _360_s.type = 'text/javascript'; 
+                    _360_s.async = true; 
+                    _360_s.src = _360_url + '/360.js';
+                    _360_s.onload = function () { _360Widget.init(_360_host, _360_proto, _360_options); };
+                    var _360_x = document.getElementsByTagName('script')[0]; _360_x.parentNode.insertBefore(_360_s, _360_x);
+                }
+            )();
+        </script>
 </body>
 
 </html>
