to change about prt

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     <li>
                         <a href="#education">Education</a>
                     </li>
-
+                    <li>
+                        <a href="#github">GH chart</a>
+                    </li>
                     <li>
                         <a href="#certificates">Certificates</a>
                     </li>
@@ -100,14 +102,14 @@
         <section class="about-section" id="aboutme">
             <div class="about-content">
                 <h2>About Us</h2>
-                <p> Welcome to Janit Yadav's profile! Janit is a passionate individual who loves exploring new places
-                    and is enthusiastic about the world of web development. Currently pursuing a Bachelor's degree in
-                    Computer Applications (BCA) at Manipal University, Jaipur, Janit is diving deep into the realm of
-                    HTML and CSS, honing his skills in building beautiful and interactive websites. </br>
-                    <br> Janit's fascination with technology extends beyond coding languages. He has a particular
+                <p> Welcome to my profile! I am a passionate individual i loves exploring new places
+                    and am enthusiastic about the world of web development.I am Currently pursuing a Bachelor's degree in
+                    Computer Applications (BCA) at Manipal University, Jaipur, I am diving deep into the realm of
+                    HTML and CSS, honing my skills in building beautiful and interactive websites. </br>
+                    <br> I am fascination with technology extends beyond coding languages. I have a particular
                     fondness for macOS, appreciating its user-friendly interface and seamless integration with creative
-                    tools. Inspired by the possibilities that JavaScript offers in terms of dynamic web development, he
-                    aspires to broaden his knowledge and expertise in this powerful programming language.
+                    tools. Inspired by the possibilities that JavaScript offers in terms of dynamic web development, i
+                    aspires to broaden my knowledge and expertise in this powerful programming language.
                 </p>
             </div>
         </section>
