--- a/index.html
+++ b/index.html
@@ -149,6 +149,13 @@
                             web designing</a>
                     </p>
                 </div>
+                <div class="certificate-item">
+                    <p class="college">HTML & CSS in depth, Meta</p>
+                    <p class="year">Year: 2023</p>
+                    <p class="certificate-link">Certificate Link: <a target="_blank"
+                            href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in depth, Meta</a>
+                    </p>
+                </div>
             </div>
         </section>
 
