to add new certificate

--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
                     <li>
                         <a href="#education">Education</a>
                     </li>
-                    <li>
-                        <a href="#github">GH chart</a>
-                    </li>
-                    <li>
-                        <a href="#certificates">Certificates</a>
-                    </li>
+            
                     <li>
                         <a href="#projects">Projects</a>
                     </li>
@@ -116,8 +111,6 @@
         <section class="education-section" id="education">
             <div class="education-content">
                 <h2>Education</h2>
-
-
                 <div class="education-item">
                     <p class="college"><a target="_blank" href="https://jaipur.manipal.edu/">Manipal Univerity,
                             Jaipur</a></p>
@@ -128,33 +121,28 @@
                             Behror</a></p>
                     <p class="year-subject">Year: 2009 - 2022 | CBSE</p>
                     <!-- <p class="achievement">percentage="75%"</p> -->
-                </div>
-            </div>
-        </section>
-        <section class="github-chart" id="github">
-            <h2>GitHub Contributions</h2>
-            <div class="chart-container">
-                <a href="https://github.com/janityadav16">
-                    <img src="http://ghchart.rshah.org/janityadav16" alt="2016rshah's Github chart" /></a>
-            </div>
-        </section>
-        <section class="certificate-section" id="certificates">
-            <div class="certificate-content">
-                <h2>Certificates</h2>
-                <div class="certificate-item">
-                    <p class="college">Responsive Web Designing, freecodecamp</p>
-                    <p class="year">Year: 2023</p>
-                    <p class="certificate-link">Certificate Link: <a target="_blank"
-                            href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive
-                            web designing</a>
-                    </p>
-                </div>
-                <div class="certificate-item">
-                    <p class="college">HTML & CSS in depth, Meta</p>
-                    <p class="year">Year: 2023</p>
-                    <p class="certificate-link">Certificate Link: <a target="_blank"
-                            href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in depth, Meta</a>
-                    </p>
+
+                    <h3>Certificates</h3>
+                    <div class="education-item">
+                        <p class="college">Responsive Web Designing, freecodecamp</p>
+                        <p class="year">Year: 2023</p>
+                        <p class="certificate-link">Certificate Link: <a target="_blank"
+                                href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive
+                                web designing</a>
+                        </p>
+                    </div>
+                    <div class="education-item">
+                        <p class="college">HTML & CSS in depth, Meta</p>
+                        <p class="year">Year: 2023</p>
+                        <p class="certificate-link">Certificate Link: <a target="_blank"
+                                href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in depth, Meta</a>
+                        </p>
+                    </div>
+                    <h3>GitHub Contributions</h3>
+                    <div class="chart-container">
+                        <a href="https://github.com/janityadav16">
+                            <img src="http://ghchart.rshah.org/janityadav16" alt="2016rshah's Github chart" /></a>
+                    </div>
                 </div>
             </div>
         </section>
