--- a/index.html
+++ b/index.html
@@ -124,19 +124,16 @@
 
                     <h3>Certificates</h3>
                     <div class="education-item">
-                        <p class="college">Responsive Web Designing, freecodecamp</p>
+                        <p class="college"><a target="_blank"
+                            href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive Web Designing, freecodecamp</a></p>
                         <p class="year">Year: 2023</p>
-                        <p class="certificate-link">Certificate Link: <a target="_blank"
-                                href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive
-                                web designing</a>
-                        </p>
+            
                     </div>
                     <div class="education-item">
-                        <p class="college">HTML & CSS in depth, Meta</p>
+                        <p class="college"><a target="_blank"
+                            href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in depth, Meta</a></p>
                         <p class="year">Year: 2023</p>
-                        <p class="certificate-link">Certificate Link: <a target="_blank"
-                                href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in depth, Meta</a>
-                        </p>
+            
                     </div>
                     <h3>GitHub Contributions</h3>
                     <div class="chart-container">
