--- a/school.html
+++ b/school.html
@@ -3,7 +3,59 @@
 <head>
   <title>Header Example</title>
   <style>
-    /* CSS styles for the header */
+    .banner {
+      position: relative;
+      width: 100%;
+      height: 300px;
+      overflow: hidden;
+    }
+
+    .slideshow {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      animation: slide 10s infinite;
+    }
+
+    .slide {
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    /* Keyframe animation for the slideshow */
+    @keyframes slide {
+      0% {
+        transform: translateX(0%);
+      }
+      20% {
+        transform: translateX(0%);
+      }
+      25% {
+        transform: translateX(-100%);
+      }
+      45% {
+        transform: translateX(-100%);
+      }
+      50% {
+        transform: translateX(-200%);
+      }
+      70% {
+        transform: translateX(-200%);
+      }
+      75% {
+        transform: translateX(-100%);
+      }
+      95% {
+        transform: translateX(-100%);
+      }
+      100% {
+        transform: translateX(0%);
+      }
+    }
     .header {
       display: flex;
       align-items: center;
@@ -48,21 +100,28 @@
   </style>
 </head>
 <body>
-  <div class="header">
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-    </div>
-    <div class="navigation">
-      <div class="dropdown">
-        <button class="dropbtn">Menu ▼</button>
-        <div class="dropdown-content">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Contact</a>
+    <div class="header">
+        <div class="logo">
+          <img src="logo.png" alt="Logo">
         </div>
-      </div>
+        <div class="navigation">
+          <div class="dropdown">
+            <button class="dropbtn">Menu ▼</button>
+            <div class="dropdown-content">
+              <a href="#">Home</a>
+              <a href="#">About</a>
+              <a href="#">Services</a>
+              <a href="#">Contact</a>
+            </div>
+          </div>
+        </div>
+  <div class="banner">
+    <div class="slideshow">
+      <div class="slide" style="background-image: url(image1.jpg);"></div>
+      <div class="slide" style="background-image: url(image2.jpg);"></div>
+      <div class="slide" style="background-image: url(image3.jpg);"></div>
     </div>
   </div>
+</head>
 </body>
 </html>
