--- a/school.html
+++ b/school.html
@@ -1,46 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Header Example</title>
+  <title>TPS School</title>
   <link rel="stylesheet" href="css/school.css">
 </head>
+<header>
+    <ul class="navbar">
+        <li><a href="#about">About</a></li>
+        <li><a href="ahivment">Achivement</a></li>
+        <li><a href="#contact">contact</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+    </ul>
+</header>
 <body>
-    <div class="header">
-        <div class="logo">
-          <img src="logo.png" alt="Logo">
-        </div>
-        <div class="navigation">
-          <div class="dropdown">
-            <button class="dropbtn">Menu ▼</button>
-            <div class="dropdown-content">
-              <a href="#">Home</a>
-              <a href="#">About</a>
-              <a href="#">Services</a>
-              <a href="#">Contact</a>
-            </div>
-          </div>
-        </div>
-  <div class="banner">
-    <div class="slideshow">
-      <div class="slide" style="background-image: url(image1.jpg);"></div>
-      <div class="slide" style="background-image: url(image2.jpg);"></div>
-      <div class="slide" style="background-image: url(image3.jpg);"></div>
-    </div>
-  <div class="header">
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-    </div>
-    <div class="navigation">
-      <div class="dropdown">
-        <button class="dropbtn">Menu ▼</button>
-        <div class="dropdown-content">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Contact</a>
-        </div>
-      </div>
-    </div>
-  </div>
+    <h1 class="heading">TPS School</h1>
+    <p>TPS School, known for its commitment to academic excellence and holistic development, stands as a beacon of learning and growth in the educational landscape. With a rich heritage spanning several decades, TPS School has consistently nurtured young minds, fostering a love for knowledge, critical thinking, and creativity. The dedicated faculty members bring their expertise and passion to the classroom, creating a vibrant learning environment that encourages students to explore, inquire, and discover. TPS School's curriculum is thoughtfully designed to provide a well-rounded education, encompassing not only core subjects but also a wide range of co-curricular activities, enabling students to develop their talents and interests beyond the traditional academic realm. Equipped with state-of-the-art facilities and resources, TPS School offers a supportive and inclusive community where every student is valued, respected, and encouraged to reach their full potential. TPS School is not just an educational institution; it is a place where lifelong friendships are forged, lasting memories are created, and futures are shaped.</p>
+    <section>
+
+    </section>
 </body>
 </html>
