--- a/carmania.html
+++ b/carmania.html
@@ -16,5 +16,24 @@
       <a class="menu-item" href="#">Contact</a>
     </nav>
   </header>
+
+  <section id="home">
+    <h2>Welcome to Our Website!</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ultrices massa. Morbi feugiat dolor non purus venenatis dignissim. Aenean eu gravida turpis. Phasellus in turpis eget turpis mollis aliquam. Sed quis lacus bibendum, lobortis ex at, faucibus turpis. Nulla sed sem vel ipsum congue elementum.</p>
+  </section>
+
+  <section>
+    <h2>About Us</h2>
+    <p></p>
+  </section>
+
+  <section id="services">
+    <h2>Services</h2>
+    <ul>
+      <li>Service 1</li>
+      <li>Service 2</li>
+      <li>Service 3</li>
+    </ul>
+  </section>
 </body>
 </html>
