--- a/carmania.html
+++ b/carmania.html
@@ -3,6 +3,8 @@
 <head>
   <title>Carmania</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to our responsive website, where you can explore our content seamlessly across different devices. Our website adapts to various screen sizes, ensuring an optimal viewing experience on desktops, laptops, tablets, and smartphones. Discover our comprehensive range of information, services, and products, all designed to cater to your needs wherever you are. Join us and enjoy a smooth and user-friendly browsing experience on any device." />
 </head>
 <body>
   <header>
@@ -19,20 +21,20 @@
 
   <section id="home">
     <h2>Welcome to Our Website!</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ultrices massa. Morbi feugiat dolor non purus venenatis dignissim. Aenean eu gravida turpis. Phasellus in turpis eget turpis mollis aliquam. Sed quis lacus bibendum, lobortis ex at, faucibus turpis. Nulla sed sem vel ipsum congue elementum.</p>
+    <p>where we bring you the latest innovations and comfort-enhancing features for your ultimate driving experience. Your car is more than just a means of transportation; it's a sanctuary on wheels, a space where you can relax, connect, and enjoy every journey to the fullest. Step into a world of luxury and convenience as we explore the home-inspired features that will transform your car into a haven of comfort. Our cutting-edge technology and meticulous attention to detail ensure that your time on the road feels like a seamless extension of your home. Imagine stepping into your car and being greeted by a warm, inviting ambiance. Our customizable lighting systems allow you to set the mood, while our plush, ergonomically designed seats provide the perfect balance of support and relaxation. Stay connected with the outside world without compromising safety through our intuitive infotainment systems, </p>
   </section>
 
   <section>
     <h2>About Us</h2>
-    <p></p>
+    <p>Welcome to our car website, where passion for automobiles meets a commitment to excellence. At [Company Name], we are dedicated to providing you with a comprehensive platform that caters to all your automotive needs. Whether you're a car enthusiast seeking the latest industry news, a prospective buyer in search of your dream vehicle, or a proud owner looking for maintenance tips and support, we have you covered.</p>
   </section>
 
   <section id="services">
     <h2>Services</h2>
     <ul>
-      <li>Service 1</li>
-      <li>Service 2</li>
-      <li>Service 3</li>
+      <li>car buying</li>
+      <li>car selling</li>
+      <li>luxary cars</li>
     </ul>
   </section>
 </body>
