--- a/carmania.html
+++ b/carmania.html
@@ -19,7 +19,7 @@
 
   <section id="home">
     <h2>Welcome to Our Website!</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ultrices massa. Morbi feugiat dolor non purus venenatis dignissim. Aenean eu gravida turpis. Phasellus in turpis eget turpis mollis aliquam. Sed quis lacus bibendum, lobortis ex at, faucibus turpis. Nulla sed sem vel ipsum congue elementum.</p>
+    <p>best used car from family to luxary all kind of cars are avaliable here you can always visit us on our showroom</p>
   </section>
 
   <section>
