--- a/carmania.html
+++ b/carmania.html
@@ -16,10 +16,10 @@
   
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Cars</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#Home">Home</a></li>
+      <li><a href="#Cars">Cars</a></li>
+      <li><a href="#Services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   
@@ -53,9 +53,9 @@
         <h2>Contact Us</h2>
         <p>Feel free to get in touch with us:</p>
         <ul>
-          <li>Email: info@carwebsite.com</li>
-          <li>Phone: 9352460700</li>
-          <li>Address: behror,alwar,rajasthan</li>
+          <li class="contact"><a target="_blank" href="https://www.bigboytoyz.com/">big boys toy</a></li>
+          <li class="contact">Phone: 9352460700</li>
+          <li class="contact">Address: behror,alwar,rajasthan</li>
         </ul>
       </section>
   </main>
