--- a/carmania.html
+++ b/carmania.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="car, cars, vehicle, automobiles, automotive">
   <meta name="author" content="Your Name">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/carmania.css">
 </head>
 <body>
   <header>
