to correct mistake

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h3>GitHub Contributions</h3>
                     <div class="chart-container">
                         <a href="https://github.com/janityadav16">
-                            <img src="http://ghchart.rshah.org/janityadav16" alt="2016rshah's Github chart" /></a>
+                            <img src="https:/github.com/janityadav16" alt="2016rshah's Github chart" /></a>
                     </div>
                 </div>
             </div>
