--- a/form.html
+++ b/form.html
@@ -3,33 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/form.css">
+  <link rel="stylesheet" href="/Users/janit/Desktop/css/form.css">
   <title>Contact Form</title>
 </head>
 <body>
   <h2 class="head">Info form</h2>
   <form action="/submit" method="post" class="form">
     <label for="name"><b>Name:</b></label>
-    <input type="text" id="name" name="name" required><br>
+    <input type="text" id="name" name="name" required placeholder="Enter your name"><br>
 
-    <label for="phone no."><b>Phone no.</b></label>
-    <input type="text" id="name" name="name" required><br>
-
-    <label for="about school"><b>About School</b></label>
-    <input type="text" id="email" name="email" required><br>
-
-    <label for="subject"><b>Subject:</b></label>
-    <input type="text" id="subject" name="subject" required><br>
+    <label for="mobile no."><b>Mobile no.</b></label>
+    <input type="text" id="name" name="name" required placeholder="Enter your mobile no"><br>
+   
+    <label for="email"><b>Email:</b></label>
+    <input type="text" id="email" name="email" required placeholder="Enter your email"><br>
 
     <label for="date of birth"><b>Date of Birth:</b></label>
   <input type="date" id="date of birth" name="date of birth"><br>
 
-    <label for="message"><b>Message:</b></label>
-    <textarea id="message" name="message" rows="4" required></textarea><br>
-
-    <input type="Reset" value="Reset">
-
-    <input type="submit" value="Submit">
+    <input type="submit" value="log in">
   </form>
 </body>
 </html>
