--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
 
                 <div class="project-grid">
                     <a href="#" class="project-item">
-                        <img src="/Users/janit/Desktop/img/p1.png" alt="Submit Form">
+                        <img src="img/p1.png" alt="Submit Form">
                         <div class="caption">Submit Form</div>
                     </a>
                     <a href="#" class="project-item">
-                        <img src="/Users/janit/Desktop/img/p2.png" alt="Tribute Page">
+                        <img src="img/p2.png" alt="Tribute Page">
                         <div class="caption">Tribute Page</div>
                     </a>
                     <a href="#" class="project-item">
-                        <img src="/Users/janit/Desktop/img/p3.png" alt="Project 3">
+                        <img src="img/p3.png" alt="Project 3">
                         <div class="caption">Portfolio</div>
                     </a>
                     <!-- Add more project items as needed -->
@@ -173,25 +173,25 @@
             <h2>Gallary</h2>
             <div class="gallery-row">
                 <div class="gallery-item">
-                    <img src="/Users/janit/Desktop/img/1.jpeg" alt="Image 1">
+                    <img src="img/1.jpeg" alt="Image 1">
                     <!-- <div class="caption">Caption 1</div> -->
                 </div>
                 <div class="gallery-item">
-                    <img src="/Users/janit/Desktop/img/2.jpeg" alt="Image 2">
+                    <img src="img/2.jpeg" alt="Image 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="/Users/janit/Desktop/img/3.jpeg" alt="Image 3">
+                    <img src="img/3.jpeg" alt="Image 3">
                 </div>
             </div>
             <div class="gallery-row">
                 <div class="gallery-item">
-                    <img src="/Users/janit/Desktop/img/4.jpeg" alt="Image 4">
+                    <img src="img/4.jpeg" alt="Image 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="/Users/janit/Desktop/img/5.jpeg" alt="Image 5">
+                    <img src="5.jpeg" alt="Image 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="/Users/janit/Desktop/img/6.jpeg" alt="Image 6">
+                    <img src="img/6.jpeg" alt="Image 6">
                 </div>
             </div>
             <!-- Add more gallery rows as needed -->
