--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <img src="img/4.jpeg" alt="Image 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="5.jpeg" alt="Image 5">
+                    <img src="img/5.jpeg" alt="Image 5">
                 </div>
                 <div class="gallery-item">
                     <img src="img/6.jpeg" alt="Image 6">
