--- a/grid.html
+++ b/grid.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
        <link rel="stylesheet" href="css/grid.css">
@@ -11,4 +11,14 @@
     <div class="box d">D</div>
 </div>
     </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Bootstrap 101 Template</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Bootstrap -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
+</head>
 </html>
