to make code store

--- a/grid.html
+++ b/grid.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!--  <!DOCTYPE html>
 <html>
     <head>
        <link rel="stylesheet" href="css/grid.css">
@@ -11,14 +11,16 @@
     <div class="box d">D</div>
 </div>
     </body>
-</html> -->
+</html>
 
 <!DOCTYPE html>
 <html>
 <head>
 <title>Bootstrap 101 Template</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Bootstrap -->
+ Bootstrap 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
-</html>
+</html> -->
+
+<!-- Rest of the page content goes here -->
