--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                             <h2 class="text-center">project</h2>
                             <div class="row">
                                 <div class="pro-img">
-                                    <img src="/Users/janit/Desktop/Screenshot 2023-06-23 at 4.30.52 PM.png" alt="Project 1" class="img-fluid" height="400px" width="29%">
-                                    <img src="/Users/janit/Desktop/p1.png" alt="Project 2" class="img-fluid" height="400px" width="29%">
-                                    <img src="/Users/janit/Desktop/p2.png" alt="Project 3" class="img-fluid" height="400px" width="29%">
+                                    <img src="..//img/p1.png" alt="Project 1" class="img-fluid" height="400px" width="29%">
+                                    <img src="..//img/p2.png" alt="Project 2" class="img-fluid" height="400px" width="29%">
+                                    <img src="..//img/p3.png" alt="Project 3" class="img-fluid" height="400px" width="29%">
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                         <img src="/Users/janit/Desktop/7.jpeg" alt="image-1" class=" img-fluid rounded border">
                     </div>
                     <div class="col-md-4 mb-4">
-                        <img src="/Users/janit/Desktop/WhatsApp Image 2023-09-19 at 7.16.25 PM.jpeg" alt="image-2" class="img-fluid rounded border">
+                        <img src="..//img/1.jpeg" alt="image-2" class="img-fluid rounded border">
                     </div>
                     <div class="col-md-4 mb-4">
                         <img src="/Users/janit/Desktop/3.jpeg" alt="image-3" class="img-fluid rounded border">
